feat: create manifest
